# nafta

./: CHANGES.md  Cargo.toml  README.md
.github/: install-sqlite.bat
.github/workflows/: rust.yml
src/: lib.rs  sqlite.rs
tests/: migrations_test.rs  tempfile.rs
tests/migrations/2020-05-06-221151_create_posts/: up.sql
